--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -2,20 +2,16 @@
 @import "base/main";
 @import "plate";
 @import "ui/ui";
-
 .aeWidgetBtn {
   opacity: 0;
   background-color: transparent !important;
-
   .aeWidgetBtn-Wave {
     border-color: goldenrod !important;
   }
-
   .aeWidgetBtn-icon_logo {
     background-image: url('../images/logo_single.png') !important;
     background-color: transparent !important;
   }
-
   .aeWidgetBtn-icon_book {
     color: dimgray !important;
     background-color: whitesmoke;
@@ -37,13 +33,10 @@ body {
   color: $cl-default-text;
   position: relative;
   overflow-x: hidden;
-
   &>section:not(.page_mainheader) {
     padding-top: 3em;
     padding-bottom: 3em;
-  }
-
-  // &>section:nth-child(n + ) {
+  } // &>section:nth-child(n + ) {
   //   background-color: #fff;
   //   color: black;
   //   a {
@@ -68,11 +61,9 @@ a {
   text-decoration: none;
   color: $cl-default-text;
   transition: color .5s ease;
-
   &:hover {
     color: #C7C7C7;
   }
-
   &:focus {
     background-color: transparent;
   }
@@ -101,11 +92,9 @@ a {
 .alternation-section:nth-child(2n+1) {
   background-color: #fff;
   color: black;
-
   a {
     color: black;
   }
-
   .atm-btn-reserved {
     color: #fff;
     border: 1px solid #000;
@@ -120,7 +109,6 @@ a {
   position: relative;
   z-index: 1000;
   margin-top: -4em;
-
   .event-container {
     padding-top: 3em;
     background: -moz-linear-gradient(left, rgba(31, 31, 31, 0) 0%, rgba(31, 31, 31, 0.85) 5%, rgba(31, 31, 31, 0.85) 15%, rgba(31, 31, 31, 0.85) 85%, rgba(31, 31, 31, 0.85) 95%, rgba(31, 31, 31, 0) 100%);
@@ -128,12 +116,10 @@ a {
     background: linear-gradient(to right, rgba(31, 31, 31, 0) 0%, rgba(31, 31, 31, 0.85) 5%, rgba(31, 31, 31, 0.85) 15%, rgba(31, 31, 31, 0.85) 85%, rgba(31, 31, 31, 0.85) 95%, rgba(31, 31, 31, 0) 100%); // filter:;
     // progid:DXImageTransform.Microsoft.gradient( startColorstr='#001f1f1f', endColorstr='#001f1f1f', GradientType=1);
     position: relative;
-
     .description {
       padding-left: 0;
     }
   }
-
   .bg-color {
     // padding: 54px 0;
     height: 54px; // background-color: rgba(33, 32, 31, 0.65);
@@ -147,12 +133,10 @@ a {
 .page_mainheader {
   color: white;
   background-color: transparent;
-
   .atm-btn-reserved {
     // margin-top: 3em;
     text-align: center;
   }
-
   .description__title {
     .title {
       text-align: center;
@@ -164,7 +148,6 @@ a {
       font-size: 4.5em;
       font-weight: 800;
       line-height: 1.5em;
-
       &::after {
         content: "";
         position: absolute;
@@ -180,47 +163,39 @@ a {
       }
     }
   }
-
   .description__text {
     line-height: 2em;
     font-size: 1.1em;
     text-align: justify;
-
     &::first-letter {
       margin-left: 1em;
     }
   }
-
   .price {
     margin-top: 1em;
-    font-size: 2em;
+    font-size: 1.7em;
   }
 }
 
 .page_photogallery {
   padding-top: 2.1em;
-
   .col-md-3 {
     flex-grow: 1;
     max-width: initial;
     overflow: hidden;
     margin-top: 1rem;
   }
-
   .col-md-3:nth-child(2) {
     flex-basis: 50%;
     max-width: 50%;
   }
-
   .col-md-3:nth-child(4n) {
     flex-basis: 50%;
     max-width: 50%;
   }
-
   .img-container {
     overflow: hidden;
   }
-
   .img {
     background-size: cover;
     background-position-y: 30%;
@@ -228,7 +203,6 @@ a {
     background-repeat: no-repeat;
     height: 280px; // cursor: pointer;
     transition: all 4s ease;
-
     &:hover {
       transform: scale(1.1);
     }
@@ -252,7 +226,6 @@ a {
 .atm-advantages-description {
   ul {
     list-style: none;
-
     li {
       font-size: 1.5em;
       margin-top: 1em;
@@ -269,11 +242,8 @@ a {
   margin-top: 1.5em;
   text-align: justify;
   margin-bottom: 1.5em;
-
   .price {}
-
   .date {}
-
   .atm-masterclass-reason {
     .reason {
       margin-top: 1em;
@@ -287,12 +257,10 @@ a {
     margin-bottom: 2em;
     font-size: 1.5em;
     line-height: 1.5em;
-
     .description__text {
       text-align: center;
     }
   }
-
   .last-chance {
     p {
       line-height: 1.5em;
@@ -304,7 +272,6 @@ a {
   .feedback {
     margin-top: 3em;
   }
-
   .img-container {
     float: left;
     width: 10em;
@@ -319,25 +286,20 @@ a {
     background-size: cover;
     background-repeat: no-repeat;
   }
-
   .atm-feedback__text {
     font-size: 1.2em;
     line-height: 1.5em;
     text-align: justify;
     word-break: break-word;
-
     p::first-letter {
       margin-left: 2em;
     }
-
     .atm-feedback__name {
       display: inline-block;
       font-size: 2em;
       margin-bottom: .5em;
     }
-  }
-
-  // .atm-feedback {
+  } // .atm-feedback {
   //   color: black;
   //   font-size: 1.4rem; // padding: 2rem;
   //   background-color: #fff;
